<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_local_movies"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_tv_series"
        android:icon="@drawable/ic_live_tv_black"
        android:title="@string/tv_series" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_black"
        android:title="@string/my_favorites" />

</menu>